<resources>
    <string name="app_name">Plate Handler</string>
    <string name="nv_home">Home</string>
    <string name="nv_recipe">Recipes</string>
    <string name="nv_product">Products</string>
    <string name="nv_shopping">Shopping List</string>
    <string name="nv_export">Export Database</string>
    <string name="nv_import">Import Database</string>
    <string name="nv_credits">Credits</string>
    <string name="dt_opened">Drawer Opened</string>
    <string name="dt_closed">Drawer Closed</string>
    <string name="dg_ok">OK</string>
    <string name="dg_cancel">Cancel</string>
    <string name="pg_info">Information</string>
    <string name="pg_ingredient">Ingredients</string>
    <string name="pg_step">Steps</string>
    <string name="sr_recipe">Recipe for</string>
    <string name="mn_settings">Settings</string>
    <string name="mn_share">Share</string>
    <string name="mn_calculate">Calculate</string>
    <string name="mn_edit">Edit</string>
    <string name="mn_remove">Remove</string>
    <string name="bt_shopping">New List</string>
    <string name="bt_ingredient">New Ingredient</string>
    <string name="bt_step">New Step</string>
    <string name="bt_item">New Item</string>
    <string name="bt_recipe">From Recipe</string>
    <string name="dg_pd_add">Do you want to add a new product?</string>
    <string name="dg_pd_edit">Do you want to edit the product?</string>
    <string name="dg_pd_remove">Do you want to remove the product?</string>
    <string name="dg_rp_add">Do you want to add a new recipe?</string>
    <string name="dg_rp_edit">Do you want to edit the recipe?</string>
    <string name="dg_rp_remove">Do you want to remove the recipe?</string>
    <string name="dg_sp_add">Do you want to create a new shopping list?</string>
    <string name="dg_ex_add">Do you want to create a new export file?</string>
    <string name="dg_im_choose">Do you want to import data from this file?
        All your previous data will be removed!</string>
    <string name="sb_pd_add">New product added!</string>
    <string name="sb_pd_edit">Product updated!</string>
    <string name="sb_pd_remove">Product removed!</string>
    <string name="sb_st_add">New step added!</string>
    <string name="sb_rp_add">New recipe added!</string>
    <string name="sb_rp_edit">Recipe updated!</string>
    <string name="sb_rp_remove">Recipe removed!</string>
    <string name="sb_sp_add">New shopping list created!</string>
    <string name="sb_ex_add">Database exported!</string>
    <string name="sb_im_add">Database imported!</string>
    <string name="ts_welcome">Welcome to Plate Handler!</string>
    <string name="ts_product">Product data is incomplete!</string>
    <string name="ts_used">This product cannot be removed because
        it is used in a recipe!</string>
    <string name="ts_recipe">Recipe data is incomplete!</string>
    <string name="ts_step">Step data is incomplete!</string>
    <string name="ts_shopping">Shopping list data is incomplete!</string>
    <string name="ts_export">Export data is incomplete!</string>
    <string name="ts_item">At least one item is required!</string>
    <string name="ts_database">Database error!</string>
    <string name="ts_file">File operation error!</string>
    <string name="ts_directory">New directory created!</string>
    <string name="ts_empty">At least one of the product average sizes is not set!</string>
    <string name="er_pd_name">Product name is empty!</string>
    <string name="er_pd_nutrients">Sum of nutrients in product
        cannot be higher than its average size!</string>
    <string name="er_rp_name">Recipe name is empty!</string>
    <string name="er_rp_author">Name of the author is empty!</string>
    <string name="er_ig_amount">Empty amount!</string>
    <string name="er_st_content">Content of this step is empty!</string>
    <string name="er_sp_amount">Empty amount!</string>
    <string name="er_sp_name">Empty name!</string>
    <string name="er_ex_name">Name of the file to export is empty!</string>
    <string name="ep_recent">No recipes!</string>
    <string name="ep_recipe">Empty recipe list!</string>
    <string name="ep_product">Empty product list!</string>
    <string name="ep_step">Empty step list!</string>
    <string name="ep_shopping">Empty shopping list!</string>
    <string name="ep_import">Empty import list!</string>
    <string name="ep_spinner">No products!</string>
    <string name="fn_ingredient">Used!</string>
    <string name="fn_step">Done!</string>
    <string name="ct_recipes">Recipes</string>
    <string name="ct_products">Products</string>
    <string name="ct_name">Name</string>
    <string name="ct_author">Author</string>
    <string name="ct_serving">Servings</string>
    <string name="ct_time">Time</string>
    <string name="ct_difficulty">Difficulty</string>
    <string name="ct_spiciness">Spiciness</string>
    <string name="ct_country">Cuisine</string>
    <string name="ct_type">Type</string>
    <string name="ct_preference">Preferences</string>
    <string name="ct_meat">Meat</string>
    <string name="ct_vegetarian">Vegetarian</string>
    <string name="ct_alphabetical">Alphabetically</string>
    <string name="ct_favorite">Favorite</string>
    <string name="ct_measure">Measure</string>
    <string name="ct_amount">Amount</string>
    <string name="ct_product">Product</string>
    <string name="ct_step">Step</string>
    <string name="ct_size">Average Size</string>
    <string name="ct_carbohydrates">Carbohydrates</string>
    <string name="ct_proteins">Proteins</string>
    <string name="ct_fats">Fats</string>
    <string name="ct_nutrients">All Nutrients</string>
    <string name="ct_date">Date</string>
    <string name="ct_state">State</string>
    <string name="ct_other">Other</string>
    <string name="ct_chart">Nutrients Charts</string>
    <string name="ct_total">Total Calories</string>
    <string name="ct_per">Per Serving</string>
    <string name="ct_walk">Walking</string>
    <string name="ct_bike">Cycling</string>
    <string name="ct_run">Running</string>
    <string name="ct_vacuum">Vacuuming</string>
    <string name="ct_dance">Dancing</string>
    <string name="ct_swim">Swimming</string>
    <string name="ct_developer">Developer</string>
    <string name="ct_version">Version</string>
    <string name="ct_license">License</string>
    <string name="ct_attribution">Attribution</string>
    <string name="ct_saved">Saved Data</string>
    <string name="ct_unsaved">Unsaved Data</string>
    <string name="ex_recipe">All Recipes</string>
    <string name="ex_product">All Products</string>
    <string name="ex_shopping">Shopping List</string>
    <string name="ex_settings">All Settings</string>
    <string name="ex_photo">All Photos</string>
    <string name="hd_hm_statistics">App Stats</string>
    <string name="hd_hm_recent">Visited Recipes</string>
    <string name="hd_rp_mg_photo">Set Recipe Photo</string>
    <string name="hd_rp_mg_essential">Set Recipe Basics</string>
    <string name="hd_rp_mg_data">Set Recipe Data</string>
    <string name="hd_rp_sh_data">Recipe Data</string>
    <string name="hd_rp_sh_ingredient">Ingredients</string>
    <string name="hd_rp_sh_step">Preparation Steps</string>
    <string name="hd_rp_cl_kcal">Calories in Kcal</string>
    <string name="hd_rp_cl_kj">Calories in Kj</string>
    <string name="hd_rp_cl_ingredient">Partial Calories</string>
    <string name="hd_rp_cl_burn">Burn One Serving</string>
    <string name="hd_rp_settings">Recipe Search</string>
    <string name="hd_ig_mg_add">Add Ingredient</string>
    <string name="hd_ig_mg_data">Set Ingredient Data</string>
    <string name="hd_st_mg_add">Add Step</string>
    <string name="hd_st_mg_current">Current Steps</string>
    <string name="hd_st_mg_data">Set Step Content</string>
    <string name="hd_pd_mg_photo">Set Product Photo</string>
    <string name="hd_pd_mg_essential">Set Product Basics</string>
    <string name="hd_pd_mg_composition">Set Composition</string>
    <string name="hd_pd_sh_composition">Product Composition</string>
    <string name="hd_pd_sh_kcal">Calories in Kcal</string>
    <string name="hd_pd_sh_kj">Calories in Kj</string>
    <string name="hd_pd_settings">Product Search</string>
    <string name="hd_sp_sh_data">Shopping Data</string>
    <string name="hd_sp_sh_list">Shopping List</string>
    <string name="hd_sp_mg_add">Add Shopping Item</string>
    <string name="hd_sp_mg_data">Set Item Data</string>
    <string name="hd_ex_data">Set Export File</string>
    <string name="hd_ex_guideline">Export Guidelines</string>
    <string name="hd_im_file">Import Files</string>
    <string name="hd_cd_author">Author of the App</string>
    <string name="hd_cd_library">Libraries Used</string>
    <string name="hd_cd_icon">Icons Used</string>
    <string name="hd_cd_font">Fonts Used</string>
    <string name="tt_hm_statistics">A section presenting the user with statistics regarding the
        database used in the <b>Plate Handler</b> app.\n\nThe fragment <b>Recipes</b>
        defines the number of recipes added by the author, while <b>Products</b> expresses
        the sum of all saved products and those added by default to the database after the first
        launch of the app.</string>
    <string name="tt_hm_recent">A section showing a list of <b>six</b> recently viewed recipes
        available in the app.\n\nThe individual items are ordered <b>from the last
        shown</b> recipe. Choosing one of them takes the user to a specific page of the recipe.
    </string>
    <string name="tt_rp_mg_photo">A section allowing the user to add a photo representing the
        <b>approximate appearance</b> of the currently created recipe. It is not a required part of
        the creation process to be completed.\n\nThe user can select a specific image from the
        gallery by selecting <b>the button on the left side</b>. If the photo does not meet the
        requirements, it can be removed using <b>the button on the right side</b>.</string>
    <string name="tt_rp_mg_essential">A section allowing the user to supplement
        <b>main data</b> regarding the recipe. It is a required part to be completed and
        <b>cannot be left empty</b>.\n\nThe <b>Name</b> text field stands for the name given to the
        recipe, while <b>Author</b> text field describes the creator of a particular dish.</string>
    <string name="dp_pd_photo">Image of the product</string>
    <string name="dp_pd_type">Icon of the product type</string>
    <string name="dp_caption">Icon of the caption</string>
    <string name="dp_remove">Option to remove the item</string>
    <string name="dp_tutorial">Icon of the tutorial option</string>
    <string name="dp_bt_add">Button to add a photo</string>
    <string name="dp_bt_remove">Button to remove a photo</string>
    <string name="dp_bt_product">Button to add the new product</string>
</resources>