<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/gp_home"
        android:checkableBehavior="single">
        <item
            android:id="@+id/it_home"
            android:icon="@drawable/ic_dl_home"
            android:title="@string/nv_home" />
    </group>

    <group
        android:id="@+id/gp_food"
        android:checkableBehavior="single">
        <item
            android:id="@+id/it_recipe"
            android:icon="@drawable/ic_dl_recipe"
            android:title="@string/nv_recipe" />

        <item
            android:id="@+id/it_product"
            android:icon="@drawable/ic_dl_product"
            android:title="@string/nv_product" />

        <item
            android:id="@+id/it_shopping"
            android:icon="@drawable/ic_dl_shopping"
            android:title="@string/nv_shopping" />
    </group>

    <group
        android:id="@+id/gp_database"
        android:checkableBehavior="single">
        <item
            android:id="@+id/it_export"
            android:icon="@drawable/ic_dl_export"
            android:title="@string/nv_export" />

        <item
            android:id="@+id/it_import"
            android:icon="@drawable/ic_dl_import"
            android:title="@string/nv_import" />
    </group>

    <group
        android:id="@+id/gp_credits"
        android:checkableBehavior="single">
        <item
            android:id="@+id/it_credits"
            android:icon="@drawable/ic_dl_credits"
            android:title="@string/nv_credits" />
    </group>
</menu>