<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/it_share"
            android:icon="@drawable/ic_st_share"
            android:title="@string/mn_share"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/it_calculate"
            android:icon="@drawable/ic_st_calculate"
            android:title="@string/mn_calculate"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/it_edit"
            android:icon="@drawable/ic_st_edit"
            android:title="@string/mn_edit"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/it_remove"
            android:icon="@drawable/ic_st_remove"
            android:title="@string/mn_remove"
            app:showAsAction="ifRoom" />
    </group>
</menu>