<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/WidthMatch">

    <ImageView
        android:id="@+id/iv_remove"
        style="@style/IvClose"
        android:contentDescription="@string/dp_remove"
        android:src="@drawable/ic_ot_close"
        app:layout_constraintBottom_toBottomOf="@+id/til_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/til_amount" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_amount"
        style="@style/TilDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sp_measure"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/iv_remove"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_amount"
            style="@style/EtItemAmount"
            android:hint="@string/ct_amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_ct_measure"
        style="@style/TvTiny"
        android:text="@string/ct_measure"
        app:layout_constraintEnd_toEndOf="@+id/sp_measure"
        app:layout_constraintStart_toStartOf="@+id/sp_measure"
        app:layout_constraintTop_toTopOf="@+id/til_amount" />

    <Spinner
        android:id="@+id/sp_measure"
        style="@style/WidthZero"
        app:layout_constraintBottom_toBottomOf="@+id/til_amount"
        app:layout_constraintEnd_toStartOf="@+id/til_name"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/til_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_ct_measure" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/TilDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/sp_measure"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            style="@style/EtItemName"
            android:hint="@string/ct_name" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>