<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BothMatch"
    tools:context=".fragments.product.ProductManageFragment">

    <androidx.core.widget.NestedScrollView
        style="@style/BothMatch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/ClFab">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_hd_photo"
                style="@style/CvHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/ClData">

                    <ImageView
                        android:id="@+id/iv_tt_photo"
                        style="@style/IvTutorial"
                        android:contentDescription="@string/dp_tutorial"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_hd_photo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_hd_photo" />

                    <TextView
                        android:id="@+id/tv_hd_photo"
                        style="@style/TvHeader"
                        android:text="@string/hd_pd_mg_photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_tt_photo"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_photo"
                style="@style/CvData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_hd_photo">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/ClData">

                    <ImageView
                        android:id="@+id/iv_photo"
                        style="@style/IvPhoto"
                        android:contentDescription="@string/dp_pd_photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/ib_add"
                        style="@style/IbDefault"
                        android:contentDescription="@string/dp_bt_add"
                        android:src="@drawable/ic_ot_photo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_photo" />

                    <ImageButton
                        android:id="@+id/ib_remove"
                        style="@style/IbDefault"
                        android:contentDescription="@string/dp_bt_remove"
                        android:src="@drawable/ic_st_remove"
                        app:layout_constraintStart_toEndOf="@+id/ib_add"
                        app:layout_constraintTop_toBottomOf="@+id/iv_photo" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_hd_essential"
                style="@style/CvHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_photo">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/ClData">

                    <ImageView
                        android:id="@+id/iv_tt_essential"
                        style="@style/IvTutorial"
                        android:contentDescription="@string/dp_tutorial"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_hd_essential"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_hd_essential" />

                    <TextView
                        android:id="@+id/tv_hd_essential"
                        style="@style/TvHeader"
                        android:text="@string/hd_pd_mg_essential"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_tt_essential"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_essential"
                style="@style/CvData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_hd_essential">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/ClData">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_name"
                        style="@style/TilDefault"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name"
                            style="@style/EtText"
                            android:hint="@string/ct_name" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/iv_ct_type"
                        style="@style/IvInfoProduct"
                        android:contentDescription="@string/dp_caption"
                        app:layout_constraintEnd_toStartOf="@+id/tv_ct_type"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_name" />

                    <TextView
                        android:id="@+id/tv_ct_type"
                        style="@style/TvCaption"
                        android:text="@string/ct_type"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_ct_type"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/iv_ct_type"
                        app:layout_constraintTop_toTopOf="@+id/iv_ct_type" />

                    <ImageView
                        android:id="@+id/iv_type"
                        style="@style/IvInfo"
                        android:contentDescription="@string/dp_pd_type"
                        app:layout_constraintEnd_toStartOf="@+id/sp_type"
                        app:layout_constraintStart_toStartOf="@+id/tv_ct_type"
                        app:layout_constraintTop_toBottomOf="@+id/tv_ct_type" />

                    <Spinner
                        android:id="@+id/sp_type"
                        style="@style/WidthZero"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_type"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_type"
                        app:layout_constraintTop_toTopOf="@+id/iv_type" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_hd_composition"
                style="@style/CvHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_essential">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/ClData">

                    <ImageView
                        android:id="@+id/iv_tt_composition"
                        style="@style/IvTutorial"
                        android:contentDescription="@string/dp_tutorial"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_hd_composition"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_hd_composition" />

                    <TextView
                        android:id="@+id/tv_hd_composition"
                        style="@style/TvHeader"
                        android:text="@string/hd_pd_mg_composition"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_tt_composition"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_composition"
                style="@style/CvData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_hd_composition">

                <androidx.constraintlayout.widget.ConstraintLayout style="@style/ClData">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_size"
                        style="@style/TilDefault"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_size"
                            style="@style/EtNumber"
                            android:hint="@string/ct_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_carbohydrates"
                        style="@style/TilDefault"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_size">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_carbohydrates"
                            style="@style/EtNumber"
                            android:hint="@string/ct_carbohydrates" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_proteins"
                        style="@style/TilDefault"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_carbohydrates">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_proteins"
                            style="@style/EtNumber"
                            android:hint="@string/ct_proteins" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_fats"
                        style="@style/TilDefault"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_proteins">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_fats"
                            style="@style/EtNumber"
                            android:hint="@string/ct_fats" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_finished"
        style="@style/FabDefault"
        android:src="@drawable/ic_ot_finished"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>